prevent user header from overlapping content all the way across the page

--- a/public/stylesheets/sass/responsive-layout.scss
+++ b/public/stylesheets/sass/responsive-layout.scss
@@ -34,10 +34,10 @@ body {
         .user-header {
             border-radius: 8px 0 0 0;
             clear: both;
+            display: inline-block;
             position: fixed;
             right: 0;
             bottom: 0;
-            width: 100%;
         }
             .user-account-navigation {
                 border-radius: 8px 0 0 0;
